fix: add overflow auto to card styling; refactor Overview component to utilize CardTemplate for error and source not found messages

--- a/src/components/CardTemplate/CardTemplate.module.css
+++ b/src/components/CardTemplate/CardTemplate.module.css
@@ -1,5 +1,6 @@
 .card {
     padding: 16px;
+    overflow: auto;
 }
 
 .card--col1 {
